--- a/static/style.css
+++ b/static/style.css
@@ -750,7 +750,6 @@ button {
     height: 100%;
     flex-grow: 1;
     width: 80%;
-    overflow-y: auto;
     
     /* padding: 5px; */
     border-radius: 5px;
@@ -801,6 +800,7 @@ button {
     visibility: hidden;
     color: #aeaeae;
     font-weight: 700;
+    /* -webkit-text-stroke: 0.1px black; */
 }
 
 .message-wrapper {
@@ -847,6 +847,7 @@ button {
 }
 #messages {
     overflow-y: auto;
+    height: 90%;
 }
 
 #sendmessage_hud {
