socket message data comes (SEND MESSAGE ONLY)

--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -170,6 +170,7 @@
                 active_chat.scrollTop = active_chat.scrollHeight;
             }
 
+            document.getElementById('sendmessage_textarea').value = '';
         }
 
         let CHAT_SOCKET_IDS = [];
